fix: min-width仅对.app-main-wrap .app-main生效

--- a/packages/theme/css/_layout.scss
+++ b/packages/theme/css/_layout.scss
@@ -201,11 +201,14 @@
   .app-main-wrap {
     flex: 1;
     overflow: auto;
+
+    .app-main {
+      // 最小分辨率 - 侧边栏宽度 - 边距 - 边距
+      min-width: calc(1366px - $sidebar-width - $padding-primary - $padding-primary);
+    }
   }
 
   .app-main {
-    // 最小分辨率 - 侧边栏宽度 - 边距 - 边距
-    min-width: calc(1366px - $sidebar-width - $padding-primary - $padding-primary);
     flex: 1; // 兼容老项目
     overflow: auto; // 兼容老项目
   }
